--- a/Projet_Ajour/PAG.ui
+++ b/Projet_Ajour/PAG.ui
@@ -59,6 +59,9 @@
    </item>
    <item row="17" column="0" rowspan="2" colspan="2">
     <widget class="QTextEdit" name="Mesure">
+     <property name="markdown">
+      <string/>
+     </property>
      <property name="html">
       <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;meta charset=&quot;utf-8&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
@@ -67,7 +70,7 @@ hr { height: 1px; border-width: 0; }
 li.unchecked::marker { content: &quot;\2610&quot;; }
 li.checked::marker { content: &quot;\2612&quot;; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Segoe UI'; font-size:9pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;rgregreg&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
    </item>
@@ -183,7 +186,7 @@ li.checked::marker { content: &quot;\2612&quot;; }
    <item row="2" column="0">
     <widget class="QComboBox" name="TypeAudit">
      <property name="currentText">
-      <string>2</string>
+      <string>1</string>
      </property>
      <item>
       <property name="text">
@@ -298,6 +301,23 @@ li.checked::marker { content: &quot;\2612&quot;; }
    </item>
    <item row="9" column="0">
     <widget class="QComboBox" name="Secteur"/>
+   </item>
+   <item row="26" column="1">
+    <widget class="QPushButton" name="BouttonModifier">
+     <property name="styleSheet">
+      <string notr="true"/>
+     </property>
+     <property name="text">
+      <string>Modifier</string>
+     </property>
+    </widget>
+   </item>
+   <item row="0" column="2">
+    <widget class="QLabel" name="ID">
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
