--- a/Projet_Ajour/hygiene.ui
+++ b/Projet_Ajour/hygiene.ui
@@ -162,7 +162,17 @@
      <x>960</x>
      <y>90</y>
      <width>411</width>
-     <height>221</height>
+     <height>361</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QTableWidget" name="tableWidget_2">
+   <property name="geometry">
+    <rect>
+     <x>960</x>
+     <y>450</y>
+     <width>411</width>
+     <height>351</height>
     </rect>
    </property>
   </widget>
